--- a/_posts/2021-06-02-app.md
+++ b/_posts/2021-06-02-app.md
@@ -7,3 +7,15 @@ author: "zhouxr"
 header-img: "img/post-bg-2015.jpg"
 tags: [iOS]
 ---
+
+
+#### 图片测试
+- 测试一张
+- 看吧,传送门在这里[click](https://www.baidu.com)
+
+#### 如图所示
+![](../img/test.png)
+
+
+
+完
