--- a/_posts/2021-06-02-app.md
+++ b/_posts/2021-06-02-app.md
@@ -9,12 +9,15 @@ tags: [iOS]
 ---
 
 
-#### 图片测试
+### 图片测试
 - 测试一张
 - 看吧,传送门在这里[click](https://www.baidu.com)
 
-#### 如图所示
-![](../img/test.png)
+### 如图所示
+![img](/img/test.png)
+
+
+### ![](../img/test.png)
 
 
 
